plugins {
  id 'de.undercouch.download' version '3.4.3' apply false
  id 'com.jfrog.bintray' version '1.8.4' apply false
  id 'org.sonarqube' version '2.7' apply false
}

allprojects {
  repositories {
    mavenCentral()
    jcenter()
    maven { url "https://jitpack.io" }
    maven { url "https://m2.dv8tion.net/releases" }
    mavenLocal()
  }

  apply plugin: 'java'
  apply plugin: 'idea'

  sourceCompatibility = 16
  targetCompatibility = 16
}

ext.slf4jVersion = '1.7.25'

group = 'com.sedmelluq'
